Fixed the color contrast issue on the hero image text

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -40,10 +40,12 @@ body {
 /* -----------navbar and main page------------- */
 .brand-text-style {
   font-size: 2rem;
+  color: #6c9494;
 }
 
 .welcome-text-style {
-  font-size: 1rem;
+  font-size: 2rem;
+  color: #6c9494;
 }
 
 .bg-color-heather {
@@ -426,7 +428,7 @@ color: #17a2b8; /* text-info */
   a.nav-link.main-logo-link {
     padding: 0.2rem 0.2rem;
   }
-  p.text-white.welcome-text-style {
+  .welcome-text-style {
     font-size: 2.5rem;
   }
 }
@@ -443,11 +445,11 @@ color: #17a2b8; /* text-info */
   body {
      height: calc(100vh - 116px);
   }
-  .display-4.text-white.brand-text-style {
-    font-size: 1.5rem;
+  .brand-text-style {
+    font-size: 1.75rem;
   }
-  p .text-white.welcome-text-style {
-    font-size: 1.5rem;
+  .welcome-text-style {
+    font-size: 1.1rem;
   }
   .nav-link {
     padding: 0.16rem;
@@ -509,10 +511,10 @@ color: #17a2b8; /* text-info */
   .text-error {
     font-size: 1.1rem;
   }
-  .display-4.text-white.brand-text-style {
+  .brand-text-style {
     font-size: 2rem;
   }
-  p.text-white.welcome-text-style {
+  .welcome-text-style {
     font-size: 1rem;
   }
   a.footer-item,
@@ -523,10 +525,10 @@ color: #17a2b8; /* text-info */
 }
 
 @media (max-width: 280px){
-  .display-4.text-white.brand-text-style {
+  .brand-text-style {
     font-size: 1.1rem;
   }
-  p.text-white.welcome-text-style {
-    font-size: .75rem;
+  .welcome-text-style {
+    font-size: 0.75rem;
   }
 }
